add assignments for DAA and SP

--- a/Design-and-Analysis-of-Algorithms/第二章.md
+++ b/Design-and-Analysis-of-Algorithms/第二章.md
@@ -386,3 +386,56 @@ input: List $L$.
 output: Number of inversions in $L$ and $L$ in sorted order.
 
 <img src="pics/2-25.png" alt="逆序对分治递归算法" style="zoom:67%;" />
+
+分析这个算法的时间复杂度，我们可以发现，这个排序+计数的算法对于一个规模为$n$的数据来说，时间复杂度为$O(n\log n)$.
+
+*Proof.* 分析最差的情况的运行时间$T(n)$，我们可以发现满足下面的式子：
+$$
+T(n)=
+\begin{cases}
+\Theta(1) & \text{if }n=1\\
+T(\lfloor n/2\rfloor) + T(\lceil n/2\rceil) + \Theta(n) &\text{if } n>1
+\end{cases}
+$$
+那么如何求解这样一个递推的表达式呢？下面就要引入master theorem.
+
+##### Master Theorem
+
+主方法：令$a\geq 1,b\geq 2,c>0$同时假设$T(n)$表示的是定义在非负整数上的一个函数，这个函数满足下面的条件：
+$$
+T(n)=aT(\frac{n}{b})+\Theta(n^c)
+$$
+$T(0)=0$和$T(1)=\Theta(1)$. 其中$n/b$意味着要么$\lfloor n/b\rfloor$或者$\lceil n/b\rceil$. 那么我们存在如下的结论：
+
+- case 1. 如果$c<\log_b a$，那么$T(n)=\Theta(n^{\log_b a})$.
+- case 2. 如果$c=\log_b a$，那么$T(n)=\Theta(n^c\log n)$.
+- case 3. 如果$c>\log_b a$，那么$T(n)=\Theta(n^c)$.
+
+下面我们考虑一下主方法不适用的一些情况：
+
+- 如果子问题的数量不是一个常量（$T(n)=nT(n/2)+n^2$）
+- 如果子问题的数量小于1（$T(n)=\dfrac{1}{2}T(n/2)+n^2$）
+- 用于划分和合并子问题的时间复杂度不是$\Theta(n^c)$（$T(n)=2T(n/2)+n\log n$）
+
+更一般化的主定理：
+
+假设$a\geq 1,b>1$且均为常数，假设$f(n)$是一个函数，$T(n)$由以下递归式子给出：
+$$
+T(n)=aT(n/b)+f(n)
+$$
+那么$T(n)$可能有如下的渐近界：
+
+1. 如果对于某个常数$\epsilon>0$, 有$f(n)=O(n^{\log_b a-\epsilon})$, 则$T(n)=\Theta(n^{\log_b a})$
+2. 如果$f(n)=\Theta(n^{\log_b a})$，则$T(n)=\Theta(n^{\log_b a}\log n)$
+3. 如果对于某个常数$\epsilon>0$，有$f(n)=\Omega(n^{\log_b a+\epsilon})$，且存在常数$c<1$使得对于所有足够大的$n$，有$af(n/b)\leq cf(n)$，则$T(n)=\Theta(f(n))$
+
+对于这三种情况我们会发现，$T(n)$取得是$f(n)$与$O(n^{\log_b a})$比较下较大的那个，第一种情况，如果$f(n)$是多项式地小于$n^{\log_b a}$那么$T(n)$就取$n^{\log_b a}$. 反之还要多满足一个条件$af(n/b)\leq cf(n)$则取$f(n)$. 如果相等则取$n^{\log_b a}\log n$. 
+
+如果我们发现$f(n)$与$n^{\log_b a}$之间不满足这种多项式地大于或者小于关系则不能用主方法求解。
+
+举个例子：$T(n)=2T(n/2)+n\log n$不能使用主方法求解：
+
+分析：$a=b=2$. $n^{\log_b a}=n^{\log_2 2}=O(n)$. 而$f(n)=n\log n$，跟$O(n)$比较渐近大于$O(n)$.
+
+但是不属于第三种情况，因为$(n\log n)/n=\log n<n^{\epsilon}$. 因此这种情况是落在情况2和3之间的，条件不成立不能使用主定理求解。
+
