--- a/Stochastic-Processes-and-Applications/第一章.md
+++ b/Stochastic-Processes-and-Applications/第一章.md
@@ -530,14 +530,345 @@ $$
 $$
 E(X)=\sum_{i=1}^\infty x_iP(X=x_i)
 $$
-重要公式（这里略去一些条件的说明）
+假设$F(x)$是随机变量$X$的分布函数，$g(x)$在$R$上连续，如果$\int_{-\infty}^{+\infty}|g(x)|\mathrm{d}F(x)<\infty$, 则$Y=g(X)$的数学期望存在且：
 $$
 E(Y)=E(g(x))=\int_{-\infty}^{+\infty}g(x)\mathrm{d}F(x)
 $$
+重要公式（这里略去一些条件的说明）
+
 方差：
 $$
 D(X)=\int_{-\infty}^{+\infty}[x-E(X)]^2\mathrm{d}F(x)
 $$
 
+柯西-施瓦茨不等式：
+
+对于任意的随机变量$X,Y$, 如果$E(X^2),E(Y^2)$有限，则有：
+$$
+\{E[|XY|]\}^2\leq E[X^2]\cdot E[Y^2]
+$$
+等式成立当且仅当$P\{Y=aX\}=1$时成立。
+
+对于方差也有公式：
+$$
+0\leq D(X)=E(X^2)-[E(X)]^2
+$$
+从而导出：
+$$
+[\int_{-\infty}^{+\infty}x\mathrm{d}F(x)]^2\leq \int_{-\infty}^{+\infty}x^2\mathrm{d}F(x)
+$$
+期望的平方小于等于平方的期望。（方差为0时取等号，也就是说是一个概率为1的事件（常量随机变量））
+
 ##### 条件数学期望
 
+定义：假设$(X,Y)$是二维随机变量，条件分布函数$F_{Y|X}(y|x)$存在，又若：
+$$
+\int_{-\infty}^{+\infty}|y|\mathrm{d}F_{Y|X}(y|x)<\infty
+$$
+则我们称:
+$$
+E(Y|x)=E(Y|X=x)=\int_{-\infty}^{+\infty}y\mathrm{d}F_{Y|X}(y|x)
+$$
+为在$X=x$的条件下，随机变量$Y$的条件数学期望。
+
+如果$(X,Y)$为连续性随机变量，那么：
+$$
+E(Y|x)=\int_{-\infty}^{+\infty}yf_{Y|X}(y|x)\mathrm{d}y
+$$
+
+$$
+E(X|y)=\int_{-\infty}^{+\infty}xf_{X|Y}(x|y)\mathrm{d}x
+$$
+
+**Example. 1** if $(X,Y)\sim N(0,1;0,1;\rho),(-1<\rho<1)$, 在$X=x$的条件下，$Y\sim N(\rho x,\sqrt{1-\rho^2})$.
+
+第一步：先求条件分布密度函数：
+$$
+f_{Y|X}(Y|x)=\frac{f(x,y)}{f_X(x)}
+$$
+回忆二维正态分布的联合概率密度函数和边缘概率密度函数的求法：
+
+得到：
+$$
+f_{Y|X}(Y|x)=\frac{1}{\sqrt{2\pi}\sqrt{1-\rho^2}}e^{-\frac{1}{2(1-\rho^2)}(\rho x-y)^2}
+$$
+第二步根据条件分布期望的求解方法：
+$$
+E(Y|X)=\int_{-\infty}^{+\infty}yf_{Y|X}(Y|x)\mathrm{d}y
+$$
+可以写出：
+$$
+E(Y|X)=\int_{-\infty}^{+\infty}y \frac{1}{\sqrt{2\pi}\sqrt{1-\rho^2}}e^{-\frac{1}{2(1-\rho^2)}(\rho x-y)^2}\mathrm{d}y
+$$
+最终结果为：$\rho x$.
+
+同理我们可以得到：$E(X|Y)=\rho y$.
+
+<img src="pics/4.png" alt="回归方程" style="zoom:67%;" />
+
+这个条件期望的结果本质上就是我们的回归方程，对于每一个$x_i$样本点，在得到样本点的取值情况下得到的$y$的结果为$\rho x$. （我们假设每一个样本点都是一个随机变量）
+
+其他例子见PPT.
+
+一般情况下给定联合概率分布，先求边缘分布，再求条件分布，最后求条件期望，最后得到的条件期望的结果大部分情况下是一个$X$关于$Y$的回归函数或者$Y$关于$X$的回归函数。一般是实值函数，可以证明随机变量的函数仍然是随机变量。
+$$
+E(Y|X)=\mu(x),E(X|Y)=\delta(y)
+$$
+对于随机变量的函数的条件期望，类似于求一般期望的情况。
+
+绝对收敛的情况下：
+$$
+E(g(X)|Y=y)\int_{-\infty}^{+\infty}g(x)\mathrm{d}F_{X|Y}(x|y)
+$$
+条件方差：
+$$
+D(X|Y=y)=E(X-E(X|Y=y))^2
+$$
+定理：假设$X,Y,Z$是$(\Omega,F,P)$上的随机变量，$g(\cdot),h(\cdot)$是在$R$上连续的函数，且各数学期望都存在，则：
+
+1. $E(c|Y)=c$, $c$是常数
+2. $E[aX+bY|Z]=aE[X|Z]+bE[Y|Z]$, $a,b$是常数
+3. 如果$X,Y$相互独立，则$E(Y|X=x)=E(Y)$.
+4. $E[g(X)h(Y)|X]=g(X)E[h(Y)|X],E[g(X)h(Y)|Y]=h(Y)E[g(X)|Y]$.
+5. $E\{E[g(X,Y)|Y]\}=E[g(X,Y)]$.
+6. $E[X-E(X|Y)]^2\leq E[X-g(Y)]^2$
+
+**全数学期望公式：**
+
+1. $E(X)=E[E(X|Y)]$
+2. $E[g(X)]=E\{E[g(X)|Y]\}$
+
+**Example:**
+
+假设某个时间内到达商场的顾客人数$N$服从参数为$\lambda$的泊松分布，每个顾客在该商场的消费额$X$服从$[a,b]$上的均匀分布。各位顾客之间消费是相互独立的且与$N$独立。求顾客在该商场总的消费额。
+
+【解】我们假设第$i$个顾客的消费额为$X_i$，那么所有顾客的总消费额可以写为：
+$$
+T=\sum_{i=1}^N X_i
+$$
+根据全数学期望公式：
+$$
+E(T)=E[E(T|N)]=E[E(\sum_{i=1}^NX_i|N)]=\sum_{n=0}^\infty E(\sum_{i=1}^n X_i|n)P(N=n)
+$$
+而由于每个顾客的消费额与总人数是相互独立的，因此我们可以进一步写为：
+$$
+E(T)=\sum_{n=0}^\infty\sum_{i=1}^n E(X_i)P(N=n)=E(X)\sum_{n=0}^\infty nP(N=n)=E(X)E(N)=\frac{a+b}{2}\lambda
+$$
+
+---
+
+#### 1.5 特征函数
+
+定义：假设$X,Y$是实随机变量，复随机变量$Z=X+jY$的数学期望定义为：
+$$
+E(Z)=E(X)+jE(Y),j=\sqrt{-1}
+$$
+
+$$
+\begin{split}
+E(e^{jtX})&=E(\cos tX)+jE(\sin tX)\\
+&=\int_{-\infty}^{+\infty}\cos t x\mathrm{d}F(x)+j\int_{-\infty}^{+\infty}\sin t x\mathrm{d}F(x)\\
+&=\int_{-\infty}^{+\infty} e^{jtx}\mathrm{d}F(x)
+\end{split}
+$$
+
+1. 对于所有的$t\in R$, $\cos tx$和$\sin tx$都是有界函数，因此$E(e^{jtX})$总是存在的。
+2. $E(e^{jtX})$是实变量$t$的复值函数。
+
+定义：设$X$是定义在$(\Omega,\mathcal{F},P)$上的随机变量，我们称：
+$$
+\varphi(t)=E(e^{jtX})=\int_{-\infty}^{+\infty}e^{jtx}\mathrm{d}F(x),t\in R
+$$
+为$X$的特征函数。（关于$X$的Fourier-Stieltjes变换）
+
+连续型随机变量：
+$$
+\varphi(t)=\int_{-\infty}^{+\infty} e^{jtx}f(x)\mathrm{d}x
+$$
+离散型随机变量：
+$$
+\varphi(t)=\sum_{k}e^{jtx_k}p_k
+$$
+一些常见分布的特征函数：
+
+1. 单点分布
+
+   如果$P\{X=c\}=1$，则特征函数：$\varphi(t)=E(e^{jtc})=e^{jtc},t\in R.$
+
+2. 二项分布
+
+   $\varphi(t)=(q+pe^{jt})^n,t\in R$
+
+3. 两点分布
+   $$
+   \begin{split}
+   \varphi(t)&=e^{jt\cdot 0}(1-p)+e^{jt\cdot 1}p\\
+   &=1-p+pe^{jt}=q+pe^{jt},t\in R
+   \end{split}
+   $$
+
+4. 泊松分布
+
+   $\varphi(t)=e^{\lambda (e^{jt}-1)},t\in R$
+
+5. 均匀分布
+
+   $U[-a,a]$
+
+   $\varphi(t)=\frac{\sin at}{at},t\in R$
+
+6. 指数分布
+   $$
+   f(x)=
+   \begin{cases}
+   \lambda e^{-\lambda x},&x\geq 0;\\
+   0,& x<0.
+   \end{cases}
+   (\lambda>0)
+   $$
+   
+   $$
+   \begin{split}
+   \varphi(t)&=\int_0^{+\infty}\lambda e^{jtx}e^{-\lambda x}\mathrm{d}x\\
+   &=\int_0^{+\infty}\lambda e^{-\lambda x}\cos tx\mathrm{d}x+j\lambda\int_0^{+\infty}e^{-\lambda x}\sin tx\mathrm{d}x\\
+   &=\lambda \frac{\lambda}{\lambda^2+t^2}+j\lambda\frac{t}{\lambda^2+t^2}\\
+   &=\left(1-\frac{jt}{\lambda}\right)^{-1}
+   \end{split}
+   \quad (t\in R)
+   $$
+
+7. 正态分布
+
+   $N(\mu,\sigma^2)$
+
+   $\varphi(t)=e^{j\mu t-\frac{1}{2}\sigma^2 t^2},t\in R$
+
+   特别正态分布$N(0,1)$.
+
+   $\varphi(t)=e^{-\frac{1}{2}t^2},t\in R$
+
+##### 特征函数性质
+
+随机变量$X$的特征函数满足：
+
+1. $|\varphi(t)|\leq \varphi(0)=1$; 有界函数
+2. $\varphi(t)=\varphi(-t)$. 共轭对称
+
+证明略。
+
+如果随机变量$X$的特征函数为$\varphi_X(t)$，那么$Y=aX+b$的特征函数为：
+$$
+\varphi_Y(t)=e^{jbt}\varphi_X(at)
+$$
+（波赫纳-辛钦）：函数$\varphi(t)$为特征函数的充要条件是在$R$上一致连续，非负定且$\varphi(0)=1$.
+
+##### 特征函数与矩的关系
+
+如果随机变量$X$的$n$阶矩存在，那么$X$的特征函数$\varphi(t)$的$k$阶导数$\varphi^k(t)$存在，且：
+$$
+E(X^k)=j^{(-k)} \varphi^k(0),\quad (k\leq n)
+$$
+（逆不真）
+
+例题：随机变量$X$的概率密度函数为：
+$$
+f(x)=
+\begin{cases}
+\frac{1}{2}\cos x & -\frac{\pi}{2}\leq x\leq \frac{\pi}{x}\\
+0 &\text{otherwise}
+\end{cases}
+$$
+试求解：$E(X)$和$D(X)$.
+
+这个问题可以使用一般的方法，直接使用公式先求$E(X)$然后再用$D(X)=E(X^2)-E(X)^2$求解，但是在求解$D(X)$时计算$E(X^2)$会比较麻烦，因此这里使用特征函数进行求解会更加方便：
+
+首先计算$X$的特征函数：
+$$
+\begin{split}
+\varphi(t)&=E(e^{jtX})\\
+&=\int_{-\frac{\pi}{2}}^{\frac{\pi}{2}} e^{jtx}\cdot \frac{1}{2}\cos x\mathrm{d}x\\
+&=\int_{-\frac{\pi}{2}}^{\frac{\pi}{2}} \cos tx \cdot \frac{1}{2}\cos x \mathrm{d}x + j\int_{-\frac{\pi}{2}}^{\frac{\pi}{2}}\sin tx\cdot \frac{1}{2}\cos x\mathrm{d}x\\
+&=2\int_{-\frac{\pi}{2}}^{\frac{\pi}{2}}\frac{1}{2}\cos tx \cos x\mathrm{d}x + 0\\
+&=\frac{1}{2}\int_{0}^{\frac{\pi}{2}}[\cos (t+1)x+\cos (t-1)x]\mathrm{d}x\\
+&= \frac{1}{2} \left\{ \frac{1}{t+1} \sin\left[ (t+1)\frac{\pi}{2} \right] + \frac{1}{t-1}\sin\left[ (t-1)\frac{\pi}{2} \right] \right\}
+\end{split}
+\quad (t\in R)
+$$
+一阶矩期望等于：$E(X)=j^{-1}\varphi'(0)=0$
+
+二阶矩方差等于：$D(X)=E(X^2)=j^{-2}\varphi''(0)=-(2-\frac{1}{4}\pi^2)=\frac{1}{4}\pi^2-2$.
+
+##### 反演公式和唯一性定理
+
+ 首先我们知道由一个随机变量$X$的分布函数我们可以唯一地确定其特征函数：$F(x)\Rightarrow \varphi(t)$.
+
+反过来，能否由$X$的特征函数唯一确定其分布函数？
+
+**反演公式：**假设随机变量$X$的分布函数和特征函数分别为：$F(x)$和$\varphi(t)$，则对于$F(x)$的任意连续点$x_1,x_2,(x_1<x_2)$有：
+$$
+F(x_2)-F(x_1)=\lim_{T\to \infty}\frac{1}{2\pi}\int_{-T}^T\frac{e^{-itx_1}-e^{-itx_2}}{it}\varphi(t)\mathrm{d}t
+$$
+**唯一性定理：**分布函数$F_1(x)$和分布函数$F_2(x)$恒等的充要条件是他们对应的特征函数$\varphi_1(t)$和$\varphi_2(t)$恒等。（一一对应关系）
+
+如果随机变量$X$的特征函数$\varphi(t)$在$R$上绝对可积，则$X$是连续型随机变量，其概率密度函数为：
+$$
+f(x)=\frac{1}{2\pi}\int_{-\infty}^{+\infty}e^{-itx}\varphi(t)\mathrm{d}t
+$$
+<font color=red>对于连续型随机变量$X$，概率密度函数与特征函数之间互为Fourier变换（只差一个负号）</font>
+
+例题：随机变量$X$在$[-\frac{\pi}{2},\frac{\pi}{2}]$上服从均匀分布，$Y=\cos X$，利用特征函数求解$Y$的概率密度函数。
+
+【解】基本思路：首先求解$X$的概率密度函数，然后根据特征函数的基本性质求解$Y$的特征函数，然后根据反演公式和唯一性定理求解概率密度函数。（当然不限制条件的话也可以直接求解）
+
+1. 计算$X$的概率密度函数和$Y$的特征函数：
+   $$
+   \begin{split}
+   \varphi_Y(t)&= E(e^{jtY})=E(e^{jt\cos X})\\
+   &= \int_{-\frac{\pi}{2}}^{\frac{\pi}{2}} e^{jt\cos x} \frac{1}{\pi}\mathrm{d}x\\
+   &=2\int_{0}^{\frac{\pi}{2}}e^{jt\cos x}\frac{1}{\pi}\mathrm{d}x\\
+   \end{split}
+   $$
+   （智取）$v=\cos x,\mathrm{d}v-\sin x\mathrm{d}x=-\sqrt{1-v^2}\mathrm{d}v$.
+
+   得到：
+   $$
+   \varphi_Y(t)=\frac{2}{\pi}\int_0^1e^{jtv}\frac{1}{\sqrt{1-v^2}}\mathrm{d}v
+   $$
+   
+
+2. 对比唯一性定理给出的结果：
+   $$
+   \varphi_Y(t)=\int_R e^{ity}f_Y(y)\mathrm{d}y
+   $$
+   我们可以直接得到$Y$的概率密度函数：
+   $$
+   f_Y(y)=
+   \begin{cases}
+   \frac{2}{\pi} \frac{1}{\sqrt{1-y^2}},&0<y<1\\
+   0.&\text{otherwise}
+   \end{cases}
+   $$
+
+##### 独立随机变量和的特征函数
+
+如果随机变量$X_1,\cdots,X_n$之间相互独立，令$Y=\sum_{k=1}^nX_k$，那么$Y$的特征函数为：
+$$
+\varphi_Y(t)=\prod_{k=1}^n \varphi_{X_k}(t)
+$$
+（由$n$个两点分布推导到二项分布的过程就可以使用上述性质）
+
+##### 多维随机变量的特征函数
+
+二维随机变量$(X,Y)$的特征函数定义为：
+$$
+\varphi(t_1,t_2)=E[e^{j(t_1X+t_2Y)}]=\int_{-\infty}^{+\infty}\int_{-\infty}^{+\infty}e^{j(t_1 x+t_2 y)}\mathrm{d}F(x,y)
+$$
+随机变量$X_1,X_2,\cdots,X_n$相互独立的充要条件：
+$$
+\varphi(t_1,t_2,\cdots,t_n)=\prod_{k=1}^n \varphi_{X_k}(t_k)
+$$
+<font color=red>与前面独立r.v的和特征函数之间的差别在于这里多维随机变量每个$t$都不一样。</font>
+
+有空再认真看一看这里的多维随机变量的特征函数。（课本P248-252）
+
+第一章内容就到这里吧。
