add new files for some assignments

--- a/Combinatorial-Mathematics/第三章 母函数.md
+++ b/Combinatorial-Mathematics/第三章 母函数.md
@@ -118,3 +118,26 @@ $$
 \end{split}
 $$
 上述结论得证。
+
+#### 3.2 母函数的基本运算
+
+假设$A(x),B(x),C(x)$分别是序列$(a_0,a_1,\cdots,a_n,\cdots),(b_0,b_1,\cdots,b_n,\cdots),(c_0,c_1,\cdots,c_n,\cdots)$的普通母函数：
+
+define:当且仅当对于所有的$i$，都有$c_i=a_i+b_i(i=0,1,2,\cdots,r,\cdots)$，$C(x)=A(x)+B(x)$.
+$$
+\sum_{i=0}^\infty c_ix^i=\sum_{i=0}^\infty a_ix^i+\sum_{i=0}^\infty b_ix^i=\sum_{i=0}^\infty(a_i+b_i)x^i
+$$
+define:当且仅当对于所有的$i$，都有$c_i=\sum_{k=0}^i a_kb_{i-k}(i=0,1,2,\cdots,r\cdots)$，$C(x)=A(x)B(x)$
+$$
+\sum_{i=0}^\infty c_ix^i=\left(\sum_{i=0}^\infty a_ix^i\right)\left(\sum_{j=0}^\infty b_jx^j\right)=\sum_{i=0}^\infty\left(\sum_{k=0}^i a_kb_{i-k}\right)x^i
+$$
+**重要推论：**假设$A(x)$是序列$(a_0,a_1,\cdots,a_r,\cdots)$的普通母函数，则$\frac{A(x)}{1-x}$是序列$(a_0,a_0+a_1,\cdots,a_0+a_1+\cdots+a_r,\cdots)$的普通母函数。
+
+（前$r$项求和的普通母函数）
+
+**重要推论：**$\dfrac{x(1+x)}{(1-x)^3}$是序列$(0^2,1^2,\cdots,r^2,\cdots)$的普通母函数。
+
+使用这个推论的上一个推论我们可以得到：
+
+$\dfrac{x(1+x)}{(1-x)^4}$是序列$(0^2,0^2+1^2,\cdots,0^2+1^2+2^2+\cdots+r^2,\cdots)$的普通母函数。
+
